@@ -8,9 +8,5 @@ module Devise
     config.middleware.use Warden::Manager do |config|
       Devise.configure_warden(config)
     end
-
-    initializer "devise.load_orm" do
-      require "devise/orm/#{Devise.orm}"
-    end
   end
 end
